<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.javi.myapplication.ProcessMenu">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/process_load"
        android:id="@+id/button4"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:text="@string/process_address"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText2"
        android:text="@string/process_firstn"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText3"
        android:text="@string/process_lastn"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText4"
        android:text="@string/process_phone"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <ExpandableListView android:id="@+id/expandable_list"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:transcriptMode="alwaysScroll"
            android:cacheColorHint="#00000000"
            android:listSelector="@android:color/transparent"
            android:layout_below="@+id/editText4"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignStart="@+id/button4"
            android:layout_marginTop="250dp" />
    </LinearLayout>


</RelativeLayout>
